--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ html, body, #viewDiv {
 
 .esri-widget--button {
     background-color: #242424;
-    color: #69dcff;
+    color: #ffffff;
 }
 
 .esri-widget--button:hover {
