--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,16 @@ html, body, #viewDiv {
 }
 
 .tooltip {
-  position: absolute;    
-  pointer-events: inherit;
-  transition: opacity 100ms;
+    position: absolute;    
+    pointer-events: inherit;
+    transition: opacity 100ms;
 }
 
 .tooltip>div {
-  margin: 0 auto;
-  padding: 8px;
-  border-radius: 1px;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.75);
-  transform: translate3d(-50%, -125%, 0);
+    margin: 0 auto;
+    padding: 8px;
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.75);
+    transform: translate3d(-50%, -125%, 0);
 }
 
 .esri-widget {
@@ -31,53 +30,33 @@ html, body, #viewDiv {
     color: #ffffff;
     font-family: "Aldrich";
     font-size: 14px;
-    padding: 6px;
+    padding: 12px;
     line-height: 1.8;
     vertical-align: bottom;
 }
 
-.esri-widget__heading {
+.esri-widget__heading, .esri-legend__service {
     color: #ffffff;
 }
 
-.esri-legend__service {
-    padding-right: 12px;
-    padding-left: 12px;
-    color: #ffffff;
-}
-
-.esri-widget--button {
+.esri-widget--button, .esri-popup__button {
     background-color: #242424;
-    color: #ffffff;
-}
-
-.esri-widget--button:hover {
-    background-color: #69dcff;
-    color: #242424;
-}
-
-.esri-widget--button:active {
-    background-color: #69dcff;
-    color: #242424;
-}
-
-.esri-popup__button {
     color: #69dcff;
+}
+
+.esri-widget--button:hover, .esri-widget--button:active, .esri-popup__button:hover {
+    background-color: #69dcff;
+    color: #242424;
 }
 
 .esri-view-width-xlarge .esri-popup__main-container {
     width: 325px;
 }
 
-.esri-layer-list__item {
-    background-color: #242424;
-    color: #ffffff;
+l1 {
+    color: #ff2b4c;
 }
 
-.esri-icon-visible:before {
-    color: rgb(105, 220, 255, 1);
-}
-
-.esri-icon-non-visible:before {
-    color: rgb(105, 220, 255, .5);
+l2 {
+    font-size: 12px;
 }
